--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-certifi==2018.10.15
-chardet==3.0.4
-idna==2.7
-pkg-resources==0.0.0
-pygame==1.9.4
-requests==2.20.0
-urllib3==1.24.1
+pygame
+requests
